--- a/sajt/index.html
+++ b/sajt/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="rightpart">
             <p>The Education World team, including a network of skilled content providers, have maintained this free resource for educators since 1996. In order to keep the site free, Education World is funded by corporate sponsors and advertisers. The site is also part of The Educator's Network, which simplifies educator-targeted media buying and offers efficient, optimized campaigns across multiple teacher sites via a single point of contact.</p>
-            <button>READ M9ORE</button>
+            <button>READ MORE</button>
         </div>
     </section>
     <section class="grid">
