--- a/sajt/index.html
+++ b/sajt/index.html
@@ -31,15 +31,15 @@
             </div>
 
             <div class="item-3">
-                <img src="/sajt/slika2.jpeg" alt="" style="height: 235px; width: 370px;">
+                <img src="slika2.jpeg" alt="" style="height: 235px; width: 370px;">
             </div>
             
             <div class="item-4">
-                <img src="/sajt/slika3.jpeg" alt="" style="height: 235px; width: 370px;">
+                <img src="slika3.jpeg" alt="" style="height: 235px; width: 370px;">
             </div>
             
             <div class="item-5">
-                <img src="/sajt/slika4.png" alt="" style="height: 490px; width: 370px;">
+                <img src="slika4.png" alt="" style="height: 490px; width: 370px;">
             </div>    
         </div>
     </section>
@@ -136,7 +136,7 @@
                 <p>Sample text. Lorem ipsum dolor sit amet, consectetur adipiscing elit nullam nunc justo sagittis suscipit ultrices.
                 </p>
             </div>
-        </div class="mapica">
+        </div>
         <div><iframe class="embed-responsive-item mapa" src="//maps.google.com/maps?output=embed&amp;q=Manhattan%2C%20New%20York&amp;z=10&amp;t=m" data-map="JTdCJTIyYWRkcmVzcyUyMiUzQSUyMk1hbmhhdHRhbiUyQyUyME5ldyUyMFlvcmslMjIlMkMlMjJ6b29tJTIyJTNBMTAlMkMlMjJ0eXBlSWQlMjIlM0ElMjJyb2FkJTIyJTJDJTIybGFuZyUyMiUzQSUyMiUyMiU3RA=="></iframe>
         </div>
     </section>
