--- a/JavaScript/DOM/index.html
+++ b/JavaScript/DOM/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,12 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <div id="container">
+
+    </div>
+        <script src="script.js"></script>
 </body>
-<script src="./vezba.js"></script>
+
 </html>
